Clinical Trial Profile Tab fix

--- a/force-app/main/default/classes/ApprovedLangRemote.cls
+++ b/force-app/main/default/classes/ApprovedLangRemote.cls
@@ -19,6 +19,7 @@ public without sharing class ApprovedLangRemote {
         @AuraEnabled public Boolean haveEmptyLangSS;
         @AuraEnabled public PaginationData paginationData;
         @AuraEnabled public Map<String, String> countryBySSId;
+        @AuraEnabled public String viewMode;
 
         public InitData() {
             paginationData = new PaginationData();
@@ -27,6 +28,7 @@ public without sharing class ApprovedLangRemote {
             haveEmptyLangSS = false;
 
             countryBySSId = new Map<String, String>();
+            viewMode = '';
         }
     }
 
@@ -73,6 +75,7 @@ public without sharing class ApprovedLangRemote {
         try {
             InitData initData = new InitData();
             initData.ctpId = ctpId;
+            initData.viewMode = GetPermissions.getReadOrEditStudySettings(UserInfo.getUserId());
             ctpStudySites = getStudySites(QUERY_MAIN_FILTER.replace('ctpId', ctpId));
             if(!ctpStudySites.isEmpty()) {
                 loadInitData(initData);
