REF-561 State issue fix
REF-561 State issue fix

--- a/force-app/main/default/classes/RRChangePasswordController.cls
+++ b/force-app/main/default/classes/RRChangePasswordController.cls
@@ -208,7 +208,7 @@ public without sharing class RRChangePasswordController {
                     insert newClinic;
 
                     contact.MailingCountry = (noCountry ? null : contact.MailingCountry);
-                    contact.MailingState = (noState) ? null : contact.MailingState);
+                    contact.MailingState = (noState ? null : contact.MailingState);
                     contact.AccountId = newClinic.Id;
                 } catch (Exception exp) {
                     System.debug(exp);
