--- a/force-app/main/tests/classes/Test_Batch_CreateSummaryNotifications.cls
+++ b/force-app/main/tests/classes/Test_Batch_CreateSummaryNotifications.cls
@@ -30,6 +30,7 @@ private class Test_Batch_CreateSummaryNotifications {
         insert contentDocumentLink;
 
         TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateWelcomeToStudyAlertHandler.class);
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateVisitsScheduleHandler.class);
         TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.HideSurveyTasks.class);
 
         TestData.loadTestData();
