--- a/force-app/main/default/classes/Test_Batch_CreateParticipantNotification.cls
+++ b/force-app/main/default/classes/Test_Batch_CreateParticipantNotification.cls
@@ -27,7 +27,9 @@ public without sharing class Test_Batch_CreateParticipantNotification {
                 FirstName = 'PI',
                 LastName = 'PI',
                 Email = 'pi@emil.com',
-                AccountId = piAccount.Id
+                AccountId = piAccount.Id,
+                Participant_Opt_In_Status_Emails__c = false,
+                Next_Notify_Date__c = Date.today()
         );
         contacts.add(piContact);
         insert contacts;
@@ -72,7 +74,7 @@ public without sharing class Test_Batch_CreateParticipantNotification {
         );
         insert participant;
         Participant__c part1 = [SELECT Contact__c FROM Participant__c WHERE Id =: participant.Id];
-        Contact con = new Contact(Id = part1.Contact__c, Next_Notify_Date__c = Date.today());
+        Contact con = new Contact(Id = part1.Contact__c, Next_Notify_Date__c = Date.today(), Participant_Opt_In_Status_Emails__c = false);
         update con;
 
         Participant_Enrollment__c participantEnrollment = new Participant_Enrollment__c(
