--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -366,8 +366,7 @@ public without sharing class TaskService {
     public List<Task> filterCurrentStudyTasks(List<Task> tasks) {
         Participant_Enrollment__c currentPE = ParticipantService.getInstance().getState().pe;
         if(currentPE == null) return tasks;
-        List<Task> filteredList = new List<Task>();
-        System.debug('Task JSON: ' + JSON.serializePretty(tasks));
+
         Set<Id> invIds = new Set<Id>();
         for (Task t : tasks) {
             if (t.Task_Type__c == TASK_TYPE_SURVEY && t.Description != null) invIds.add(t.Description);
@@ -375,16 +374,25 @@ public without sharing class TaskService {
         List<SurveyInvitation> invitations = [
                 SELECT Id, Participant_Enrollment__c
                 FROM SurveyInvitation
-                WHERE Id IN:invIds
+                WHERE Id IN:invIds AND Participant_Enrollment__c =: currentPE.Id
         ];
         Set<Id> peIds = new Set<Id>();
-        for (SurveyInvitation inv : invitations) peIds.add(inv.Participant_Enrollment__c);
+        Set<Id> invFilterIds = new Set<Id>();
+        for (SurveyInvitation inv : invitations) {
+            peIds.add(inv.Participant_Enrollment__c);
+            invFilterIds.add(inv.Id);
+        }
 
+        List<Task> filteredList = new List<Task>();
         for (Task t : tasks) {
             if (t.WhatId != null && t.WhatId.getSobjectType() == Participant_Enrollment__c.getSObjectType()) {
-                if (currentPE != null && t.WhatId == currentPE.Id) filteredList.add(t);
+                if (t.WhatId == currentPE.Id) {
+                    filteredList.add(t);
+                }
             } else if (t.Task_Type__c == TASK_TYPE_SURVEY && t.Description != null) {
-                if (currentPE != null && peIds.contains(currentPE.Id)) filteredList.add(t);
+                if (invFilterIds.contains(t.Description)) {
+                    filteredList.add(t);
+                }
             } else if (t.Task_Type__c != TASK_TYPE_SURVEY) {
                 filteredList.add(t);
             }
