Export Page Fix. REF-586

--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -66,7 +66,7 @@ public without sharing class ParticipantEnrollmentService {
 
     public List<Participant_Enrollment__c> getPEnrolmentsCommonCustomFieldsImpl(String userMode, List<String> customFields, String filter, String delegateId){
         String defaultFilter = ' Study_Site__c != NULL ';// AND ' + getUserModeFilter(userMode, delegateId);
-        if(userMode == CommunityService.USER_MODE_HCP && !filter.contains(' AND Id=')){
+        if(userMode == CommunityService.USER_MODE_HCP && !(filter != null && filter.contains(' AND Id='))){
                 defaultFilter += '  AND (' + getUserModeFilter(userMode, delegateId) + getHealthcareProviderFilter() + ') ';
             defaultFilter += filter != null ? filter : '';
         } else {
